# Hubris-Engine

./:  .rsync-filter  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
EngineStub/: CMakeLists.txt  Entry.cpp  Entry.h  Loader.h
Hubris/: CMakeLists.txt  Doxyfile
Hubris/include/: Engine.h  EntryPoint.h  Error.h  Hubris.h  HubrisGraphics.h  List.h  Logger.h  Memory.h  Platform.h  pch.h
Hubris/include/Core/: EventBus.h  Memory.h  ThreadPool.h  ThreaddingServer.h  Utils.h
Hubris/include/Core/Graphics/: Enums.h  Format.h  Image.h  Pipeline.h  Renderer.h  Shader.h  Swapchain.h  Window.h
Hubris/include/Core/Graphics/GL/: GLPlatform.h  GLWindow.h
Hubris/include/Core/Graphics/Vulkan/: Utility.h  vkBackend.h  vkPipeline.h  vkRenderer.h  vkShader.h  vkSwapchain.h  vkWindow.h
Hubris/include/IO/: ResourceManager.h
Hubris/src/: Engine.cpp  Memory_inst.cpp
Hubris/src/Core/Graphics/: GraphicsPlatform.cpp  Pipeline.cpp  Shader.cpp  Window.cpp
Hubris/src/Core/Graphics/GL/: GLPlatform.cpp  GLWindow.cpp
Hubris/src/Core/Graphics/Vulkan/: vkPipeline.cpp  vkShader.cpp  vkSwapchain.cpp  vkWindow.cpp
Hubris/src/IO/: ResourceManager.cpp
Sandbox/: CMakeLists.txt  Sandbox.h
Sphynx/: CMakeLists.txt  Doxyfile
Sphynx/include/: Engine.h  EntryPoint.h  Error.h  Logger.h  Memory.h  Platform.h  Sphynx.h  pch.h
Sphynx/include/Core/: EventBus.h  Memory.h  ThreadPool.h  ThreaddingServer.h  Utils.h
Sphynx/include/Core/Graphics/: Format.h  Image.h  Pipeline.h  Renderer.h  Shader.h  Swapchain.h  Window.h
Sphynx/include/Core/Graphics/GL/: GLPlatform.h  GLWindow.h
Sphynx/include/Core/Graphics/Vulkan/: Utility.h  vkBackend.h  vkRenderer.h  vkShader.h  vkSwapchain.h  vkWindow.h
Sphynx/include/IO/: ResourceManager.h
Sphynx/src/: Engine.cpp
Sphynx/src/Core/Graphics/: GraphicsPlatform.cpp  Shader.cpp  Window.cpp
Sphynx/src/Core/Graphics/GL/: GLPlatform.cpp  GLPlatform.h  GLWindow.cpp
Sphynx/src/Core/Graphics/Vulkan/: vkRenderer.cpp  vkShader.cpp  vkSwapchain.cpp  vkWindow.cpp
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
